--- a/css/main.css
+++ b/css/main.css
@@ -485,8 +485,6 @@ section#EA-intro {
   background-size: cover;
   background-position: 50% 50%;
   background-attachment: fixed;
-  -webkit-transform: translateZ(1);
-  transform: translateZ(1);
 }
 
   #EA-intro-wrap {
